@@ -11,7 +11,7 @@ import java.util.UUID;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
-import sun.misc.BASE64Encoder;
+import org.apache.commons.codec.binary.Base64;
 
 /**
  * Creates a capacity-unlimited bi-directional {@link InputStream}/{@link OutputStream} pair over
@@ -37,8 +37,8 @@ public class FullDuplexHttpStream {
         this.target = target;
 
         String authorization = null;
-        if (target.getUserInfo() != null) {
-        	authorization = new BASE64Encoder().encode(target.getUserInfo().getBytes());
+        if (target.getUserInfo() != null) {        	
+                authorization = new String(Base64.encodeBase64(target.getUserInfo().getBytes()));
         }
 
         CrumbData crumbData = new CrumbData();
